// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "1") 1`] = `
"# API Index

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](interfaces/CommentInterface.md)
- [Links to CommentInterface.propb](interfaces/CommentInterface.md)
- [CommentEnum.MemberB](enumerations/CommentEnum.md)
- [SameName:var](variables/SameName.md)
- [SameName:interface](interfaces/SameName.md)
- [SameName.prop](interfaces/SameName.md)
- [prop:var](variables/prop.md)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

- [CommentEnum](enumerations/CommentEnum.md)

## Interfaces

- [CommentInterface](interfaces/CommentInterface.md)
- [SameName](interfaces/SameName.md)

## Variables

- [SameName](variables/SameName.md)
- [prop](variables/prop.md)
- [propb](variables/propb.md)
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "2") 1`] = `
"# API Index

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](interfaces/CommentInterface.md#prop)
- [Links to CommentInterface.propb](interfaces/CommentInterface.md#propb)
- [CommentEnum.MemberB](enumerations/CommentEnum.md#memberb)
- [SameName:var](variables/SameName.md)
- [SameName:interface](interfaces/SameName.md)
- [SameName.prop](interfaces/SameName.md#prop)
- [prop:var](variables/prop.md)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

| Enumeration | Description |
| :------ | :------ |
| [CommentEnum](enumerations/CommentEnum.md) | - |

## Interfaces

| Interface | Description |
| :------ | :------ |
| [CommentInterface](interfaces/CommentInterface.md) | - |
| [SameName](interfaces/SameName.md) | - |

## Variables

| Variable | Description |
| :------ | :------ |
| [SameName](variables/SameName.md) | - |
| [prop](variables/prop.md) | - |
| [propb](variables/propb.md) | - |
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "modules") (Option Group "1") 1`] = `
"# API Index

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](globals.md#commentinterface) - Links to CommentInterface
- [Links to CommentInterface.prop](globals.md#commentinterface)
- [Links to CommentInterface.propb](globals.md#commentinterface)
- [CommentEnum.MemberB](globals.md#commentenum)
- [SameName:var](globals.md#samename-1)
- [SameName:interface](globals.md#samename)
- [SameName.prop](globals.md#samename)
- [prop:var](globals.md#prop)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Contents

- [Enumerations](globals.md#enumerations)
    - [CommentEnum](globals.md#commentenum)
- [Interfaces](globals.md#interfaces)
    - [CommentInterface](globals.md#commentinterface)
    - [SameName](globals.md#samename)
- [Variables](globals.md#variables)
    - [SameName](globals.md#samename-1)
    - [prop](globals.md#prop)
    - [propb](globals.md#propb)

## Enumerations

### CommentEnum

#### Enumeration Members

| Member | Value | Description |
| :------ | :------ | :------ |
| \`Member\` | \`0\` | Comment for Member<br /><br />**Deprecated**<br />Deprecated member<br /><br />**See**<br />[SameName](globals.md#samename-1) |
| \`MemberB\` | \`1\` | - |

## Interfaces

### CommentInterface

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
| \`propb\` | \`string\` | - |

***

### SameName

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
| \`propb\` | \`string\` | - |

## Variables

### SameName

> **SameName**: \`true\`

***

### prop

> **\`const\`** **prop**: \`true\` = \`true\`

***

### propb

> **\`const\`** **propb**: \`true\` = \`true\`
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "modules") (Option Group "2") 1`] = `
"# API Index

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](globals.md#commentinterface) - Links to CommentInterface
- [Links to CommentInterface.prop](globals.md#prop)
- [Links to CommentInterface.propb](globals.md#propb)
- [CommentEnum.MemberB](globals.md#memberb)
- [SameName:var](globals.md#samename-1)
- [SameName:interface](globals.md#samename)
- [SameName.prop](globals.md#prop-1)
- [prop:var](globals.md#prop-2)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Contents

- [Enumerations](globals.md#enumerations)
    - [CommentEnum](globals.md#commentenum)
- [Interfaces](globals.md#interfaces)
    - [CommentInterface](globals.md#commentinterface)
    - [SameName](globals.md#samename)
- [Variables](globals.md#variables)
    - [SameName](globals.md#samename-1)
    - [prop](globals.md#prop-2)
    - [propb](globals.md#propb-2)

## Enumerations

### CommentEnum

#### Enumeration Members

| Member | Value | Description |
| :------ | :------ | :------ |
| <a id="member" name="member"></a> \`Member\` | \`0\` | Comment for Member<br /><br />**Deprecated**<br />Deprecated member<br /><br />**See**<br />[SameName](globals.md#samename-1) |
| <a id="memberb" name="memberb"></a> \`MemberB\` | \`1\` | - |

## Interfaces

### CommentInterface

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop" name="prop"></a> \`prop\` | \`string\` | - |
| <a id="propb" name="propb"></a> \`propb\` | \`string\` | - |

***

### SameName

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop-1" name="prop-1"></a> \`prop\` | \`string\` | - |
| <a id="propb-1" name="propb-1"></a> \`propb\` | \`string\` | - |

## Variables

### SameName

> **SameName**: \`true\`

***

### prop

> **\`const\`** **prop**: \`true\` = \`true\`

***

### propb

> **\`const\`** **propb**: \`true\` = \`true\`
"
`;
